syntax = "proto3";

package api;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

import "api/m2m_ui/device.proto";
import "api/m2m_ui/ext_account.proto";
import "api/m2m_ui/gateway.proto";
import "api/m2m_ui/server.proto";
import "api/m2m_ui/settings.proto";
import "api/m2m_ui/staking.proto";
import "api/m2m_ui/super_node.proto";
import "api/m2m_ui/topup.proto";
import "api/m2m_ui/wallet.proto";
import "api/m2m_ui/withdraw.proto";

service M2MServerService {
    rpc AddDeviceInM2MServer (AddDeviceInM2MServerRequest) returns (AddDeviceInM2MServerResponse);
    rpc DeleteDeviceInM2MServer (DeleteDeviceInM2MServerRequest) returns (DeleteDeviceInM2MServerResponse);

    rpc AddGatewayInM2MServer (AddGatewayInM2MServerRequest) returns (AddGatewayInM2MServerResponse);
    rpc DeleteGatewayInM2MServer (DeleteGatewayInM2MServerRequest) returns (DeleteGatewayInM2MServerResponse);

    // WalletService
    rpc GetWalletBalance(GetWalletBalanceRequest) returns (GetWalletBalanceResponse);
    rpc GetVmxcTxHistory(GetVmxcTxHistoryRequest) returns (GetVmxcTxHistoryResponse);
    rpc GetWalletUsageHist(GetWalletUsageHistRequest) returns (GetWalletUsageHistResponse);
    rpc GetDlPrice (GetDownLinkPriceRequest) returns (GetDownLinkPriceResponse);

    // DeviceService
    rpc GetDeviceList(GetDeviceListRequest) returns (GetDeviceListResponse);
    rpc GetDeviceProfile(GetDeviceProfileRequest) returns (GetDeviceProfileResponse);
    rpc GetDeviceHistory(GetDeviceHistoryRequest) returns (GetDeviceHistoryResponse);
    rpc SetDeviceMode(SetDeviceModeRequest) returns (SetDeviceModeResponse);

    // MoneyService
    rpc ModifyMoneyAccount(ModifyMoneyAccountRequest) returns (ModifyMoneyAccountResponse);
    rpc GetChangeMoneyAccountHistory(GetMoneyAccountChangeHistoryRequest) returns (GetMoneyAccountChangeHistoryResponse);
    rpc GetActiveMoneyAccount(GetActiveMoneyAccountRequest) returns (GetActiveMoneyAccountResponse);

    // GatewayService
    rpc GetGatewayList(GetGatewayListRequest) returns (GetGatewayListResponse);
    rpc GetGatewayProfile(GetGatewayProfileRequest) returns (GetGatewayProfileResponse);
    rpc GetGatewayHistory(GetGatewayHistoryRequest) returns (GetGatewayHistoryResponse);
    rpc SetGatewayMode(SetGatewayModeRequest) returns (SetGatewayModeResponse);

    // ServerInfoService
    rpc GetVersion(google.protobuf.Empty) returns (GetVersionResponse);

    // SettingsService
    rpc GetSettings (GetSettingsRequest) returns (GetSettingsResponse);
    rpc ModifySettings (ModifySettingsRequest) returns (ModifySettingsResponse);

    // StakingService
    rpc Stake (StakeRequest) returns (StakeResponse);
    rpc Unstake (UnstakeRequest) returns (UnstakeResponse);
    rpc GetActiveStakes (GetActiveStakesRequest) returns (GetActiveStakesResponse);
    rpc GetStakingHistory (StakingHistoryRequest) returns (StakingHistoryResponse);
    rpc GetStakingPercentage (StakingPercentageRequest) returns (StakingPercentageResponse);

    // SuperNodeService
    rpc GetSuperNodeActiveMoneyAccount (GetSuperNodeActiveMoneyAccountRequest) returns (GetSuperNodeActiveMoneyAccountResponse);
    rpc AddSuperNodeMoneyAccount (AddSuperNodeMoneyAccountRequest) returns (AddSuperNodeMoneyAccountResponse);

    // TopUpService
    rpc GetTransactionsHistory(GetTransactionsHistoryRequest) returns (GetTransactionsHistoryResponse);
    rpc GetIncome(GetIncomeRequest) returns (GetIncomeResponse);
    rpc GetTopUpHistory(GetTopUpHistoryRequest) returns (GetTopUpHistoryResponse);
    rpc GetTopUpDestination(GetTopUpDestinationRequest) returns (GetTopUpDestinationResponse);

    // WithdrawService
    rpc GetWithdrawFee (GetWithdrawFeeRequest) returns (GetWithdrawFeeResponse);
    rpc WithdrawReq (WithdrawReqRequest) returns (WithdrawReqResponse);
    rpc GetWithdrawHistory (GetWithdrawHistoryRequest) returns (GetWithdrawHistoryResponse);
    rpc ModifyWithdrawFee (ModifyWithdrawFeeRequest) returns (ModifyWithdrawFeeResponse);
}

service AppServerService {
    rpc GetDeviceByDevEui (GetDeviceByDevEuiRequest) returns (GetDeviceByDevEuiResponse);
    rpc GetGatewayByMac (GetGatewayByMacRequest) returns (GetGatewayByMacResponse);
    rpc GetDeviceDevEuiList (google.protobuf.Empty) returns (GetDeviceDevEuiListResponse);
    rpc GetGatewayMacList (google.protobuf.Empty) returns (GetGatewayMacListResponse);
}

message AppServerDeviceProfile {
    string dev_eui = 1;
    int64 application_id = 2;
    string name = 3;
    google.protobuf.Timestamp created_at = 4;
}

message AddDeviceInM2MServerRequest {
    int64 org_id = 1;
    AppServerDeviceProfile dev_profile = 2;
}

message AddDeviceInM2MServerResponse {
    int64 dev_id = 1;
}

message DeleteDeviceInM2MServerRequest {
    string dev_eui = 1;
}

message DeleteDeviceInM2MServerResponse {
    bool status = 1;
}

message AppServerGatewayProfile {
    string mac = 1;
    int64 org_id = 2;
    string description = 3;
    string name = 4;
    google.protobuf.Timestamp created_at = 5;
}

message AddGatewayInM2MServerRequest {
    int64 org_id = 1;
    AppServerGatewayProfile gw_profile = 2;
}

message AddGatewayInM2MServerResponse {
    int64 gw_id = 1;
}

message DeleteGatewayInM2MServerRequest {
    string mac_address = 2;
}

message DeleteGatewayInM2MServerResponse {
    bool status = 1;
}

message GetDeviceByDevEuiRequest {
    string dev_eui = 1;
}

message GetDeviceByDevEuiResponse {
    int64 org_id = 1;
    AppServerDeviceProfile dev_profile = 2;
}

message GetGatewayByMacRequest {
    string mac = 1;
}

message GetGatewayByMacResponse {
    int64 org_id = 1;
    AppServerGatewayProfile gw_profile = 2;
}

message GetDeviceDevEuiListResponse {
    repeated string dev_eui = 1;
}

message GetGatewayMacListResponse {
    repeated string gateway_mac = 1;
}

// WalletService
/*message GetWalletBalanceRequest {
    int64 org_id = 1;
}

message GetWalletBalanceResponse {
    double balance = 1;
}

message GetVmxcTxHistoryRequest {
    int64 org_id = 1;
    int64 offset = 2;
    int64 limit = 3;
}

message VmxcTxHistory {
    string from = 1;
    string to = 2;
    string tx_type = 3;
    double amount = 4;
    string created_at = 5;
}

message GetVmxcTxHistoryResponse {
    int64 count = 1;
    repeated VmxcTxHistory tx_history = 2;
}

message GetWalletUsageHistRequest {
    int64 org_id = 1;
    int64 offset = 2;
    int64 limit = 3;
}

message GetWalletUsageHist {
    string StartAt = 1;
    int64 DurationMinutes = 2;

    int64 DlCntDv = 3;
    int64 DlCntDvFree = 4;
    int64 UlCntDv = 5;
    int64 UlCntDvFree = 6;
    int64 DlCntGw = 7;
    int64 DlCntGwFree = 8;
    int64 UlCntGw = 9;
    int64 UlCntGwFree = 10;

    double Spend = 11;
    double Income = 12;
    double UpdatedBalance = 13;
}

message GetWalletUsageHistResponse {
    repeated GetWalletUsageHist wallet_usage_his = 1;
    int64 count = 2;
}

message GetDownLinkPriceRequest {
    int64 org_id = 1;
}

message GetDownLinkPriceResponse {
    double down_link_price = 1;
}*/
/*

// DeviceService
enum DeviceMode {
    DV_INACTIVE = 0;
    DV_FREE_GATEWAYS_LIMITED = 1;
    DV_WHOLE_NETWORK = 2;
    DV_DELETED = 3;
}

message GetDeviceListRequest {
    int64 org_id = 1;
    int64 offset = 2;
    int64 limit = 3;
}

message GetDeviceListResponse {
    repeated DeviceProfile dev_profile = 1;
    int64 count = 2;
}

message GetDeviceProfileRequest {
    int64 org_id = 1;
    int64 dev_id = 2;
}

message DeviceProfile {
    int64 id = 1;
    string dev_eui = 2;
    int64 fk_wallet = 3;
    DeviceMode mode = 4;
    string created_at = 5;
    string last_seen_at = 6;
    int64 application_id = 7;
    string name = 8;
}

message GetDeviceProfileResponse {
    DeviceProfile dev_profile = 1;
}

message GetDeviceHistoryRequest {
    int64 org_id = 1;
    int64 dev_id = 2;
    int64 offset = 3;
    int64 limit = 4;
}

message GetDeviceHistoryResponse {
    string dev_history = 1;
}

message SetDeviceModeRequest {
    int64 org_id = 1;
    int64 dev_id = 2;
    DeviceMode dev_mode = 3;
}

message SetDeviceModeResponse {
    bool status = 1;
}

// MoneyService
enum Money {
    Ether = 0;
}

message ModifyMoneyAccountRequest {
    int64 org_id = 1;
    Money money_abbr = 2;
    string current_account = 3;
}

message ModifyMoneyAccountResponse {
    bool status = 1;
}

message GetMoneyAccountChangeHistoryRequest {
    int64 org_id = 1;
    int64 offset = 2;
    int64 limit = 3;
    Money money_abbr = 4;
}

message MoneyAccountChangeHistory {
    string addr = 1;
    string status = 2;
    string created_at = 3;
}

message GetMoneyAccountChangeHistoryResponse {
    int64 count = 1;
    repeated MoneyAccountChangeHistory change_history = 2;
}

message GetActiveMoneyAccountRequest {
    int64 org_id = 1;
    Money money_abbr = 2;
}

message GetActiveMoneyAccountResponse {
    string active_account = 1;
}

// GatewayService
enum GatewayMode {
    GW_INACTIVE = 0;
    GW_FREE_GATEWAYS_LIMITED = 1;
    GW_WHOLE_NETWORK = 2;
    GW_DELETED = 3;
}

message GetGatewayListRequest {
    int64 org_id = 1;
    int64 offset = 2;
    int64 limit = 3;
}

message GetGatewayListResponse {
    repeated GatewayProfile gw_profile = 1;
    int64 count = 2;
}

message GetGatewayProfileRequest {
    int64 org_id = 1;
    int64 gw_id = 2;
    int64 offset = 3;
    int64 limit = 4;
}

message GatewayProfile {
    int64 id = 1;
    string mac = 2;
    int64 fk_gw_ns = 3;
    int64 fk_wallet = 4;
    GatewayMode mode = 5;
    string create_at = 6;
    string last_seen_at = 7;
    int64 org_id = 8;
    string description = 9;
    string name = 10;
}

message GetGatewayProfileResponse {
    GatewayProfile gw_profile = 1;
}

message GetGatewayHistoryRequest {
    int64 org_id = 1;
    int64 gw_id = 2;
    int64 offset = 3;
    int64 limit = 4;
}

message GetGatewayHistoryResponse {
    string gw_history = 1;
}

message SetGatewayModeRequest {
    int64 org_id = 1;
    int64 gw_id = 2;
    GatewayMode gw_mode = 3;
}

message SetGatewayModeResponse {
    bool status = 1;
}

// ServerInfoService
message GetVersionResponse {
    string version = 1;
}

// SettingsService
message GetSettingsRequest {}

message GetSettingsResponse {
    int64 lowBalanceWarning = 1;
    int64 downlinkFee = 2;
    int64 transactionPercentageShare = 3;
}

message ModifySettingsRequest {
    google.protobuf.Int64Value lowBalanceWarning = 1;
    google.protobuf.Int64Value downlinkFee = 2;
    google.protobuf.Int64Value transactionPercentageShare = 3;
}

message ModifySettingsResponse {
    bool status = 1;
}

// StakingService
message StakeRequest {
    int64 org_id = 1;
    double amount = 2;
}

message StakeResponse {
    string status = 1;
}

message UnstakeRequest {
    int64 org_id = 1;
}

message UnstakeResponse {
    string status = 1;
}

message GetActiveStakesRequest {
    int64 org_id = 1;
}

message ActiveStake {
    int64 Id = 1;
    int64 FkWallet = 2;
    double Amount = 3;
    string StakeStatus = 4;
    string StartStakeTime = 5;
    string UnstakeTime = 6;
}

message GetActiveStakesResponse {
    ActiveStake act_stake = 1;
}

message StakingHistoryRequest {
    int64 org_id = 1;
    int64 offset = 2;
    int64 limit = 3;
}

message GetStakingHistory {
    double stake_amount = 1;
    string start = 2;
    string end = 3;
    string rev_month = 4;
    double network_income = 5;
    double monthly_rate = 6;
    double revenue = 7;
    double balance = 8;
}

message StakingHistoryResponse {
    repeated GetStakingHistory staking_hist = 1;
    int64 count = 2;
}

message StakingPercentageRequest {
    int64 org_id = 1;
}

message StakingPercentageResponse {
    double staking_percentage = 1;
}

// SuperNodeService
message GetSuperNodeActiveMoneyAccountRequest {
    Money money_abbr = 1;
    int64 org_id = 2;
}

message GetSuperNodeActiveMoneyAccountResponse {
    string supernode_active_account = 1;
}

message AddSuperNodeMoneyAccountRequest {
    Money money_abbr = 1;
    string account_addr = 2;
    int64 org_id = 3;
}

message AddSuperNodeMoneyAccountResponse {
    bool status = 1;
}

// TopUpService
message GetTransactionsHistoryRequest {
    int64 org_id = 1;
    int64 offset = 2;
    int64 limit = 3;
}

message GetTransactionsHistoryResponse {
    int64 count = 1;
    repeated TransactionsHistory transaction_history = 2;
}

message GetIncomeRequest {
    int64 org_id = 1;
}

message GetIncomeResponse {
    double amount = 1;
}

message TransactionsHistory {
    string from = 1;
    string to = 2;
    string money_abbr = 3;
    double amount = 4;
    string status = 5;
    string tx_hash = 6;
    string transaction_type = 7;
    google.protobuf.Timestamp last_update_time = 8;
}

message GetTopUpHistoryRequest {
    int64 org_id = 1;
    int64 offset = 2;
    int64 limit = 3;
}

message TopUpHistory {
    string from = 1;
    string to = 2;
    double amount = 3;
    string created_at = 4;
    string money_type = 5;
    string tx_hash = 6;
}

message GetTopUpHistoryResponse {
    int64 count = 1;
    repeated TopUpHistory topup_history = 2;
}

message GetTopUpDestinationRequest {
    int64 org_id = 1;
    Money money_abbr = 2;
}

message GetTopUpDestinationResponse {
    string active_account = 1;
}

// WithdrawService
message GetWithdrawFeeRequest {
    // type of crypto currency
    Money money_abbr = 1;
    int64 org_id = 2;
}

message GetWithdrawFeeResponse {
    // Withdraw object.
    double withdrawFee = 1;
}

message WithdrawReqRequest {
    int64 org_id = 1;
    Money money_abbr = 2;
    double amount = 3;
}

message WithdrawReqResponse {
    bool status = 1;
}

message GetWithdrawHistoryRequest {
    int64 org_id = 1;
    int64 offset = 2;
    int64 limit = 3;
    Money money_abbr = 4;
}

message WithdrawHistory {
    string from = 1;
    string to = 2;
    string money_type = 3;
    double amount = 4;
    double withdraw_fee = 5;
    string tx_sent_time = 6;
    string tx_status = 7;
    string tx_approved_time = 8;
    string tx_hash = 9;
}

message GetWithdrawHistoryResponse {
    int64 count = 1;
    repeated WithdrawHistory withdraw_history = 2;
}

message ModifyWithdrawFeeRequest {
    Money money_abbr = 1;
    double withdraw_fee = 2;
    int64 org_id = 3;
}

message ModifyWithdrawFeeResponse {
    bool status = 1;
}*/
